fix overflow's visibility

--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,8 @@ body {
     margin: 0 !important;
     padding: 0 !important;
 
+    overflow: visible !important;
+
     list-style-type: none !important;
 }
 
